--- a/CodeBook.html
+++ b/CodeBook.html
@@ -148,7 +148,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <ol style="list-style-type: decimal">
 <li><p><strong>subjectLabel</strong>: an identifier indicating the subject (1, 3, 5, 6, 7, 8, 11, 14, 15, 16, 17, 19, 21, 22, 23, 25, 26, 27, 28, 29, 30) [int]</p></li>
 <li><p><strong>activityName</strong>: a label denoting the activity type (WALKING, WALKING_UPSTAIRS, WALKING_DOWNSTAIRS, SITTING, STANDING, LAYING) [factor w/6 levels]</p></li>
-<li><p><strong>Columns 3-81</strong> contain the means for each of the 79 feature vectors for a particular subject and activity [numeric, bounded between -1 and 1]:</p></li>
+</ol>
+<p><strong>Columns 3-81</strong> contain the means for each of the 79 feature vectors for a particular subject and activity [numeric, bounded between -1 and 1]:</p>
+<ol start="3" style="list-style-type: decimal">
 <li><strong>timeDomain.BodyAcceleration.Mean.XYZ</strong>: numeric [-1,1]</li>
 <li><strong>timeDomain.BodyAcceleration.StandardDeviation.XY</strong>: numeric [-1,1]</li>
 <li><strong>timeDomain.GravityAcceleration.Mean.XYZ</strong>: numeric [-1,1]</li>
@@ -189,7 +191,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li><strong>frequencyDomain.BodyBodyGyroscopeMagnitude.MeanFrequency</strong>: numeric [-1,1]</li>
 <li><strong>frequencyDomain.BodyBodyGyroscopeJerkMagnitude.Mean</strong>: numeric [-1,1]</li>
 <li><strong>frequencyDomain.BodyBodyGyroscopeJerkMagnitude.StandardDeviation</strong>: numeric [-1,1]</li>
-<li><p><strong>frequencyDomain.BodyBodyGyroscopeJerkMagnitude.MeanFrequency</strong>: numeric [-1,1]</p></li>
+<li><strong>frequencyDomain.BodyBodyGyroscopeJerkMagnitude.MeanFrequency</strong>: numeric [-1,1]</li>
 </ol>
 <p>The 3-axial signals in the X, Y and Z directions are denoted with ‘-XYZ’. The normalization bounding the variables between -1 and 1 obsures the units.</p>
 <p>The tidy data set is written to the tidy.txt.</p>
