--- a/README.html
+++ b/README.html
@@ -59,7 +59,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <ul>
 <li><strong>CodeBook.md</strong>: information about raw and tidy data sets</li>
 <li><strong>README.md</strong>: this file</li>
-<li><strong>run_analysis.R</strong>: R script to transform raw data set in a tidy one</li>
+<li><strong>run_analysis.R</strong>: R script to transform raw data set into the tidy dataset</li>
 </ul>
 </div>
 <div id="how-to-create-the-tidy-data-set-from-the-raw-data-set" class="section level2">
